--- a/views/user/passport-mfa-otp.ejs
+++ b/views/user/passport-mfa-otp.ejs
@@ -27,7 +27,7 @@
             </section>
             <section>
               <p>If you do not have a MFA token, please setup a new device. 
-              <a style="justify-content: center" href="/auth/login-otp-setup">MFA Device Setup</a>
+              <a style="justify-content: center" href="<%- mfaSetupPage %>">MFA Device Setup</a>
               </p>
             </section>
           </form>
