adding notifications and undefined return url

--- a/views/user/passport-mfa-otp.ejs
+++ b/views/user/passport-mfa-otp.ejs
@@ -6,6 +6,11 @@
 %>
   <main>
     <article>
+      <% if(locals.notification){%>
+        <section>
+          <input value="<%- locals.notification %>" disabled readonly style="width: 100%; font-size: 120%; margin: 0rem 0rem 1rem; padding: 1rem; background: whitesmoke; box-sizing: border-box; border: 1px solid lightgray;"/>
+        </section> 
+      <%}%>
         <section>
           <h3>Sign In With Authentication Device</h3>
         </section>
